# mttbar-2d-deft-analysis

./: pyproject.toml  test_ttbar_2D.json  ttbar_2D.json
ttbar_2d_analysis/: __main__.py  config.py  data.py
