[tool.poetry]
name = "ttbar_2D_analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
deft-hep = "^0.3.1"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
